--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "axios": "^0.15.3",
     "vue-i18n": "^5.0.3",
     "vuex": "^2.2.1",
-    "echarts": "^3.4.0",
+    "echarts": "^3.6.2",
+    "echarts-wordcloud": "1.1.0",
+    "echarts-gl": "",
     "js-cookie": "^2.1.3",
     "clipboard": "^1.5.12",
     "html2canvas": "^0.5.0-beta4",
