--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "echarts": "^3.6.2",
     "echarts-wordcloud": "1.1.0",
     "echarts-gl": "",
+    "leaflet":"^1.1.0",
     "js-cookie": "^2.1.3",
     "clipboard": "^1.5.12",
     "html2canvas": "^0.5.0-beta4",
